syntax = "proto3";

option go_package = "gateways/user";

package common.userService.schema;

service UserService {
  rpc GetUser(UserRequest) returns (User) {}
}

message UserRequest {
  string id = 1;
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string username = 5;
  string role = 6;
  int64 created_At = 7;
}

